# Sample-ML-Project

./: example.ipynb  main.py  notes.md  project-structure.py  pyproject.toml  requirements.txt  setup.py
Sample_Project.egg-info/: PKG-INFO  SOURCES.txt
artifacts/: test.csv  train.csv
cookiecutter/ml1/: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
cookiecutter/ml1/docs/: index.md  installation.md  usage.md
cookiecutter/ml1/src/ml1/: __init__.py  cli.py
cookiecutter/ml1/tests/: __init__.py  test_ml1.py
my_awesome_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
raw file/: data.csv
src/components/: 02-data-validation.py  dataingestion.py
src/constants/: constants.py
src/exception/: exception.py
src/logging/: logger.py  logging.py
src/utils/: utils.py
